# antonio_crepaldi_embarcatech_HBr_2025

./: .gitignore  README.md
Projeto1_Contador/: CMakeLists.txt  Readme.md  contador.c
Projeto2_Joystick/: Readme.md  joystick.c
Projeto3_SENSOR/: CMakeLists.txt  Readme.md  main.c
Projeto4_Arquitetura_modular/: CMakeLists.txt  Readme.md
Projeto4_Arquitetura_modular/app/: main.c
Projeto4_Arquitetura_modular/drivers/: led_embutido.c
Projeto4_Arquitetura_modular/hal/: hal_led.c
Projeto4_Arquitetura_modular/include/: hal_led.h  led_embutido.h
Projeto5_Teste_unitario/: CMakeLists.txt  Readme.md  temp_sensor.c  temp_sensor.h
Projeto5_Teste_unitario/test/: test_temp_sensor.c
projetos/nome_do_projeto/: README.md
